EXTRA_DIST = passwd ocserv.conf Dockerfile-debian-tcp dev-tun.tgz myscript key.pem cert.pem \
	Dockerfile-debian-unix ocserv-unix.conf haproxy.cfg combo.pem Dockerfile-fedora-unix \
	Dockerfile-fedora-tcp freeradius-users Dockerfile-debian-radius Dockerfile-fedora-radius \
	freeradius-users ocserv-radius.conf radiusclient.conf radius-clients.conf \
	radiusclient-servers ca.pem ocserv-radius-config.conf \
	Dockerfile-fedora-radius-config radius-dictionary Dockerfile-debian-radius-config \
	ocserv-proxyproto.conf Dockerfile-fedora-proxyproto haproxy-proxyproto.cfg \
	haproxy-proxyproto-unix.cfg Dockerfile-fedora-proxyproto-unix ocserv-proxyproto-unix.conf \
	proxy-connectscript \
	Dockerfile-fedora-reload \
	ocserv-reload.conf radiusclient-debian.conf \
	ocserv-radius-group.conf Dockerfile-fedora-radius-group

TESTS_ENVIRONMENT = srcdir="$(srcdir)" \
	top_builddir="$(top_builddir)"
